src/objects/IX_Service_Agreement__c.object
<CustomObject>
    <fields>
        <fullName>Amendment_Description__c</fullName>
        <label>Amendment Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Counter_Executed_ISA_Received__c</fullName>
        <label>Date Counter-Executed ISA Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Executed_ISA_Sent__c</fullName>
        <label>Date Executed ISA Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_ISA_Agreement_Received__c</fullName>
        <label>Date ISA Agreement Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Payment_Plan_Amendment_Received__c</fullName>
        <label>Date Payment Plan Amendment Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interconnection__c</fullName>
        <label>Interconnection</label>
        <referenceTo>Interconnection__c</referenceTo>
        <relationshipLabel>IX Service Agreements</relationshipLabel>
        <relationshipName>IX_Service_Agreements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Original_ISA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original ISA</label>
        <referenceTo>IX_Service_Agreement__c</referenceTo>
        <relationshipLabel>IX Service Agreements</relationshipLabel>
        <relationshipName>IX_Service_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_ISA_System_Modification_Cost__c</fullName>
        <label>Total ISA System Modification Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Original</fullName>
                </value>
                <value>
                    <fullName>Amendment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>IX Service Agreement</label>
    <nameField>
        <label>IX Service Agreement</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IX Service Agreements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>